[tool.poetry]
name = "pygot"
version = "0.2.0"
description = "A Python library for https://anapioficeandfire.com"
authors = ["Ernane Sena"]
license = "MIT License"

[tool.pytest.ini_options]
addopts = "-vvv --cov=pygot --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.isort]
line_length = 100

[tool.poetry.dependencies]
python = "^3.9"
simple-rest-client = "^1.1.1"
marshmallow = "^3.14.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"
isort = "^5.9.3"
ipython = "^7.28.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-httpserver = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
